--- a/madison/css/style.css
+++ b/madison/css/style.css
@@ -328,7 +328,20 @@ nav #nav>li ul a:hover {
   height: 8px;
   width: 100%;
 }
+.map-responsive {
+  overflow: hidden;
+  padding-bottom: 50%;
+  position: relative;
+  height: 0;
+}
 
+.map-responsive iframe {
+  left: 0;
+  top: 0;
+  height: 100%;
+  width: 100%;
+  position: absolute;
+}
 /* PAGE CONTENT ----------------------------------------------------*/
 .page-content {
   position: relative;
